[lib]
crate-type = ["cdylib"]

[package]
name = "rw-intervals"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
node-bindgen = { version = "6.0" }

[build-dependencies]
node-bindgen = { version = "6.0", default-features = false, features = ["build"] }


